--- a/Parte2/Content.html
+++ b/Parte2/Content.html
@@ -4,21 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería Responsive Flexbox</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Content.css">
 </head>
 <body>
     <header>
-        <h1>Galería Responsive Flexbox</h1>
-    </header>
-    <main class="gallery-container">
-        <div class="gallery-item"><img src="https://via.placeholder.com/300" alt="Imagen 1"></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/300" alt="Imagen 2"></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/300" alt="Imagen 3"></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/300" alt="Imagen 4"></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/300" alt="Imagen 5"></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/300" alt="Imagen 6"></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/300" alt="Imagen 7"></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/300" alt="Imagen 8"></div>
-    </main>
+        <h1>Responsive Gallery</h1>
+    </header> 
+    <main class="galeria">
+        <div>
+            <a href="https://www.tomorrowland.com/home/" target="_blank">
+                <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
+            </a>
+        </div>
+        <div>
+            <a href="https://fabrikclub.com/" target="_blank">
+                <img src="https://picsum.photos/300" alt="Imagen aleatoria">
+            </a>
+        </div>
+        <div>
+            <a href="https://www.coca-cola.com/es/es/offerings/musica" target="_blank">
+                <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
+            </a>
+        </div>
+        <div>
+            <a href="https://www.arenalsound.com/" target="_blank">
+                <img src="https://picsum.photos/300" alt="Imagen aleatoria">
+            </a>
+        </div>
+        <div>
+            <a href="https://aquasella.com/" target="_blank">
+                <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
+            </a>
+        </div>
+        <div>
+            <a href="https://www.electricforest.com/" target="_blank">
+                <img src="https://picsum.photos/300" alt="Imagen aleatoria">
+            </a>
+        </div>
+        <div>
+            <a href="https://www.spain.info/es/agenda/primavera-sound/" target="_blank">
+                <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
+            </a>
+        </div>
+        <div>
+            <a href="https://www.spain.info/es/agenda/sonar-festival-internacional-musica-avanzada-barcelona/" target="_blank">
+                <img src="https://picsum.photos/300" alt="Imagen aleatoria">
+    
 </body>
 </html>
